some refinements and power point

--- a/A2/Jonas/PersonDetector.ipynb
+++ b/A2/Jonas/PersonDetector.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import cv2\n",
-    "import os"
+    "import os\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -31,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jonas\\Documents\\UniProjekte\\ComputerVision\\A2\\data\\test\n"
+      "C:\\Users\\Jonas\\Documents\\GitHub\\ComputerVision\\A2\\data\\test\n"
      ]
     }
    ],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
     "for f in files:\n",
     "    img = cv2.imread(f, 1)\n",
     "    # detect people in the image\n",
-    "    (rects, weights) = hog.detectMultiScale(img, winStride=(4, 4), padding=(8, 8), scale=1.05)\n",
+    "    (rects, weights) = hog.detectMultiScale(img, winStride=(2, 2), padding=(8, 8), scale=1.05)\n",
     "    if weights:\n",
     "        predictions.append(1)\n",
     "    else:\n",
@@ -66,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jonas\\Documents\\UniProjekte\\ComputerVision\\A2\\Jonas\n"
+      "C:\\Users\\Jonas\\Documents\\GitHub\\ComputerVision\\A2\\Jonas\n"
      ]
     }
    ],
@@ -83,11 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = open(\"results.txt\", \"w\")\n",
+    "import time\n",
+    "timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
+    "out = open(\"results{}.txt\".format(timestr), \"w\")\n",
     "for x in predictions:\n",
     "    out.write(str(x)+'.0 \\n')\n",
     "out.close()"
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,24 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jonas\\Documents\\UniProjekte\\ComputerVision\\A2\\data\\validation\\p\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd ../data/validation/p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,24 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jonas\\Documents\\UniProjekte\\ComputerVision\\A2\\data\\validation\\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd ../n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,24 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jonas\\Documents\\UniProjekte\\ComputerVision\\A2\\Jonas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd ../../../Jonas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,17 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 97.94 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "val_labels = np.array(val_labels)\n",
     "acc = (val_labels == val_predictions).mean()\n",
